pms-influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pms-influxdb-lb

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8089
      targetPort: 8086
  selector:
    app: pms-influxdb
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: pms-influxdb

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8086
  selector:
    app: pms-influxdb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pms-influxdb
  labels:
    app: pms-influxdb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pms-influxdb
  template:
    metadata:
      labels:
        app: pms-influxdb
    spec:
      containers:
        - name: pms-influxdb
          image: influxdb:2.7.5
          volumeMounts:
            - name: pms-influxdb-pv-data
              mountPath: /var/lib/influxdb2
            - name: pms-influxdb-pv-config
              mountPath: /etc/influxdb2
          ports:
            - containerPort: 8086
              name: web
      volumes:
        - name: pms-influxdb-pv-data
          hostPath:
            path: /pms/pms-influxdb-pv-data
            type: Directory
        - name: pms-influxdb-pv-config
          hostPath:
            path: /pms/pms-influxdb-pv-config
            type: Directory
