pms-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulceo-monitoring-service

spec:
  rules:
    - http:
        paths:
          - path: /api/v1/metric-exports
            pathType: Prefix
            backend:
              service:
                name: pulceo-monitoring-service
                port:
                  number: 7777
          - path: /api/v1/metric-requests
            pathType: Prefix
            backend:
              service:
                name:  pulceo-monitoring-service
                port:
                  number: 7777
          - path: /api/v1/metrics
            pathType: Prefix
            backend:
              service:
                name:  pulceo-monitoring-service
                port:
                  number: 7777
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: pulceo-monitoring-service
                port:
                  number: 7777
          - path: /api/v1/node-link-metrics
            pathType: Prefix
            backend:
              service:
                name: pulceo-monitoring-service
                port:
                  number: 7777
          - path: /pms/health
            pathType: Exact
            backend:
              service:
                name: pulceo-monitoring-service
                port:
                  number: 7777

---
apiVersion: v1
kind: Service
metadata:
  name: pulceo-monitoring-service

spec:
  ports:
    - protocol: TCP
      name: web
      port: 7777
  selector:
    app: pulceo-monitoring-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulceo-monitoring-service
  labels:
    app: pulceo-monitoring-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulceo-monitoring-service
  template:
    metadata:
      labels:
        app: pulceo-monitoring-service
    spec:
      containers:
        - name: pulceo-monitoring-service
          image: ghcr.io/spboehm/pulceo-monitoring-service:v1.2.0
          imagePullPolicy: Always
          volumeMounts:
            - name: psm-pv-db
              mountPath: /db
          ports:
            - containerPort: 7777
              name: web
      volumes:
        - name: psm-pv-db
          persistentVolumeClaim:
            claimName: psm-pv-db

---
apiVersion: v1
kind: Service
metadata:
  name: pms-influxdb-lb

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8089
      targetPort: 8086
  selector:
    app: pms-influxdb
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: pms-influxdb

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8086
  selector:
    app: pms-influxdb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pms-influxdb
  labels:
    app: pms-influxdb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pms-influxdb
  template:
    metadata:
      labels:
        app: pms-influxdb
    spec:
      containers:
        - name: pms-influxdb
          image: influxdb:2.7.5
          volumeMounts:
            - name: pms-pv-db
              mountPath: /db
            - name: pms-influxdb-pv-data
              mountPath: /var/lib/influxdb2
            - name: pms-influxdb-pv-config
              mountPath: /etc/influxdb2
          ports:
            - containerPort: 8086
              name: web
      volumes:
        - name: pms-pv-db
          persistentVolumeClaim:
            claimName: pms-pv-db
        - name: pms-influxdb-pv-data
          persistentVolumeClaim:
            claimName: pms-influxdb-pv-data
        - name: pms-influxdb-pv-config
          persistentVolumeClaim:
            claimName: pms-influxdb-pv-config
